tests/integration/commands/validate/SPEC-RELATION/02_TARGET_missing/test.itest
RUN: %reqif validate %S/sample.reqif | filecheck %s --dump-input=fail

CHECK: warning: schema error: Tag <SPEC-RELATION> is missing a <TARGET> child tag. Affected fragment:
CHECK: <SPEC-RELATION IDENTIFIER="_67JkkGyBEeuM1tJZu08zdg" LAST-CHANGE="2021-02-11T16:57:54.293+01:00">
CHECK: Validation complete with 0 errors, 1 schema issues found, 0 semantic issues found.
